<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center_horizontal"
android:orientation="vertical"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context=".aula8.login.LoginActivity"
android:background="@drawable/fondoa8">


<!-- Login progress -->
<ProgressBar
    android:id="@+id/login_progress"
    style="?android:attr/progressBarStyleLarge"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:visibility="gone" />

<ImageView android:src="@drawable/logoa8"
    android:layout_width="match_parent"
    android:layout_height="146dp"
    android:layout_marginBottom="24dp"
    android:layout_gravity="center_horizontal" />

<ScrollView
    android:id="@+id/login_form"
    android:layout_width="241dp"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <AutoCompleteTextView

            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:alpha="0.4"
            android:background="@drawable/borde"
            android:padding="10dp"/>


        <EditText

            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:alpha="0.4"
            android:background="@drawable/borde"
            android:padding="10dp"/>

        <Button
            android:id="@+id/email_sign_in_button"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in"
            android:textStyle="bold"
            android:background="#ffffff"
            android:alpha="0.7"
            />

    </LinearLayout>
</ScrollView>
</LinearLayout>