<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="unegdevelop.paintfragments.Paint">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#32536dfe"
        android:orientation="vertical"
        tools:context=".Paint" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/new_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/start_new"
                android:src="@drawable/news" />

            <ImageButton
                android:id="@+id/draw_btn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:contentDescription="@string/brush"
                android:src="@drawable/brush" />

            <ImageButton
                android:id="@+id/line_btn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:contentDescription="@string/brush"
                android:src="@drawable/brush" />

            <ImageButton
                android:id="@+id/erase_btn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:contentDescription="@string/erase"
                android:src="@drawable/eraser" />

            <ImageButton
                android:id="@+id/voice_btn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:contentDescription="Voice"
                android:src="@android:drawable/presence_audio_online" />
        </LinearLayout>


        <unegdevelop.paintfragments.DrawingView
            android:id="@+id/drawing"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:background="#FFFFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <SeekBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/BarraPincel"
                    android:minWidth="150dp"
                    android:thumbTint="#ffffff"
                    android:progressTint="#000000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="25.0 px"
                    android:id="@+id/TamañoPincel"
                    android:layout_gravity="center" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">


                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/colores"
                    android:src="@drawable/paleta" />
            </LinearLayout>

        </LinearLayout>




    </LinearLayout>

</FrameLayout>
